Adding Awesome Music

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@ setTimeout('disco()',50)
           </div>
         </div>
         <h1>Welcome to GitHub.</h1>
+        <h3>Everything is Awesome</h3>
+        <audio id="player" autoplay controls loop><source src="awesome.mp3" type="audio/mp3"></audio>
+
+
       </div>
 
     </div>
